assets/css/style.css
/* ... */
/* Media query: Portrait orientation for 540px and up*/
@media (orientation: portrait) and (min-width: 540px) {

    /* Header */
    header {
        letter-spacing: 2vw;
    }

    h1 {
        font-size: 6vw;
    }

    /* Nav Menu */
    .navLink {
        font-size: 3.5vw;
    }

    .nav-reg,
    .nav-gallery {
        margin-top: 7vh;
    }

    #menu-2 {
        flex-direction: column;
    }

    /* Icons */
    .i-chevron,
    .i-socials {
        font-size: 7vw;
    }

    /* Main */
    #mainContainer {
        margin: 12vh 0 4vh 0;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;

    }

    .who,
    .what,
    .how {
        height: 27vh;
        margin: 0;
    }

    /* From */
    /* Contact info Styling */

    #contactInfo {
        width: 100vw;
    }

    #contactInfo h2,
    #contactInfo label {
        font-size: 5vw;
        margin: 3vw;
    }

    #contactInfo p {
        font-size: 3vw;
        margin: 6vw 4vw;
    }

    /* Gallery */
    .photos {
        column-count: 3;

    }
}

/* Media query: for landscape view on phones */
@media (max-height: 430px) {

    /* Header */
    header {
        letter-spacing: 7vh;
    }

    h1 {
        font-size: 7vh;
    }

    /* Nav menu */
    .navLink {
        font-size: 5.5vh;
    }

    .nav-reg,
    .nav-gallery {
        margin-top: 11vh;
    }

    /* Icons */
    .i-chevron,
    .i-socials {
        font-size: 5vw;
    }

    /* Hero Image */
    #heroImgSection {
        height: 99.5vh;
        width: 99.5vh;
    }

    /* Home page */
    /* Main */
    #mainContainer {
        margin: 22vh 0 4vh 0;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
    }

    .who,
    .what,
    .how {
        height: 64vh;
        margin-top: 0;
    }

    .who>.sectionTextContainer h4 {
        align-self: flex-start;
    }

    .what>.sectionTextContainer h4 {
        align-self: center;
    }

    .how>.sectionTextContainer h4 {
        align-self: flex-end;
    }

    .who>.sectionTextContainer h4,
    .what>.sectionTextContainer h4,
    .how>.sectionTextContainer h4 {
        font-size: 5.5vh;
    }

    .who>.sectionTextContainer p,
    .what>.sectionTextContainer p,
    .how>.sectionTextContainer p {
        font-size: 3.6vh;
    }
}

/* Media query: for tablets and up (width: 1024px and up) */
@media screen and (min-width: 1024px) {

    #gMap {
        width: 100vw;
        margin-bottom: 4vh;
        height: 35vh;
    }

    /* From */
    /* Contact info Styling */

    #contactInfo {
        width: 100vw;
    }

    #contactInfo h2,
    #contactInfo label {
        font-size: 3vh;
        margin: 0 0 0 2vw;
    }

    #contactInfo p {
        font-size: 1.7vh;
        margin: 0px 0 0 2vw;
    }

    /* Gallery */
    #lightAnchor,
    #coldAnchor {
        padding: 12vh 0 0 0;
    }

    .photos {
        column-count: 5;

    }
}

